# live-score-widget

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  football_provider.rs  lib.rs  main.rs  models.rs  settings.rs
src/components/: AddLiveGameModal.tsx  CompactScoreCard.tsx  ErrorState.tsx  ExpandedMatchPanel.tsx  LoadingState.tsx  MatchEventTimeline.tsx  MatchStatsGrid.tsx  TeamBadge.tsx  WidgetShell.tsx
src/hooks/: useLiveMatches.ts  useMatchDetails.ts  useSelectedMatch.ts  useWidgetSettings.ts
src/lib/: eventIcons.ts  formatMatchClock.ts  normalizeStatus.ts  safeNumber.ts
src/services/: footballApiClient.ts  mockData.ts  settingsClient.ts
src/types/: football.ts  settings.ts
