[package]
name = "live-score-widget"
version = "0.1.0"
description = "Lightweight live soccer score desktop widget"
authors = ["Live Score Widget Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "live_score_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
